adding enums to overtime management and fix request for new overtime req
